@@ -1,3 +1,6 @@
+ * server-status timestamps now in a better readable format. Some columns have been merged.
+ * Much more verbose data logging when OCSP responses could not be parsed.
+ * Fixed a bug with suppressing "Expect" header sending.
  * MDMessageCmd is now also invoked for stapling with reasons 'ocsp-renewed' and 'ocsp-errored'.
  * Fixed a bug where notifications about an expiring certificate were sent out too often.
  * "md-status" handler now also adds OCSP stapling logs to the JSON output.
